# sql_table_module

./: pyproject.toml  requirements.txt  setup.cfg  setup.py  table_reader.py  table_writer.py
src/sql_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test.py
