[metadata]
name = sql_utils
description = A collection of utilities for working with SQL databases
author = RH
license = MIT
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = sql_utils
install_requires = 
    pyodbc
    datetime
    azure-identity
    azure-keyvault-secrets
python_requires = >3.6
package_dir = 
    = src
zip_safe = no